Refactor and enhance error handling in core classes; improve classpath generation and file downloading logic